ran poetry and update poetry.lock and toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+altair-ally = "^0.1.1"
+altair = "^5.5.0"
+pandas = "^2.2.3"
+numpy = "^2.2.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
 
 [tool.semantic_release]
 version_toml = [
